--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
     </div>
     <div class="faq">
         <h2>Frequently Asked Questions</h2>
-        <ul class="according">
+        <ul class="accordion">
 
-            <li type="redio " name="according" id="first">
+            <li type="radio " name="accordion" id="first">
                 <label for="first">What is Netflix ?</label>
                 <div class="content">
                     <p>Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries and more – on thousands of internet-connected devices.
@@ -83,13 +83,13 @@
                         You can watch as much as you want, whenever you want, without a single ad – all for one low monthly price. There's always something new to discover, and new TV shows and movies are added every week!</p>
                 </div>
             </li>
-            <li type="redio " name="according" id="second">
+            <li type="radio " name="accordion" id="second">
                 <label for="second">How much does Netflix cost?</label>
                 <div class="content">
                     <p>Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from ₹ 149 to ₹ 649 a month. No extra costs, no contracts.</p>
                 </div>
             </li>
-            <li type="redio " name="according" id="third">
+            <li type="radio " name="accordion" id="third">
                 <label for="third">Where can I watch?</label>
                 <div class="content">
                     <p>Watch anywhere, anytime. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.
@@ -97,19 +97,19 @@
                         You can also download your favourite shows with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.</p>
                 </div>
             </li>
-            <li type="redio " name="according" id="forth">
+            <li type="radio" name="accordion" id="forth">
                 <label for="forth">How do I cancle?</label>
                 <div class="content">
                     <p>Netflix is flexible. There are no annoying contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.</p>
                 </div>
             </li>
-            <li type="redio " name="according" id="fifth">
+            <li type="radio " name="accordion" id="fifth">
                 <label for="fifth">What can I watch on Netflix?</label>
                 <div class="content">
                     <p>Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.</p>
                 </div>
             </li>
-            <li type="redio " name="according" id="sixth">
+            <li type="radio " name="accordion" id="sixth">
                 <label for="sixth">Is Netflix good for kids?</label>
                 <div class="content">
                     <p>The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and films in their own space.
